--- a/Read/ReadShareWiki/02.计划管理/06.很难坚持怎么办.md
+++ b/Read/ReadShareWiki/02.计划管理/06.很难坚持怎么办.md
@@ -1,8 +1,11 @@
 #### 目录介绍
+- 03.想太多而做太少
+- 04.忽略长远的收益
 - 05.掌控心态很重要
 - 06.分析定位是否准
 - 07.分析执行的偏差
 - 08.分析资源足不足
+
 
 
 
@@ -11,6 +14,14 @@
 - 当你想做一件事的时候，不要想的太多，先坚定的执行起来，先干起来再说，在干的过程中，你会不断发现各种问题，然后不断去调整改进，直到找到一条属于自己的方向。
 - 执行力真的很重要，而且个人认为，几乎是最重要的能力之一，很多时候做事情，可能不需要太多的套路与复杂的玩法，只需要坚定的执行就可以了。
 - 执行力一定是第一位的，没有执行力，所有多么成熟严谨的方法论都是白搭。承认吧，你不是能力不行，你也不是比别人差，很多时候，你就是执行力不行。坚持听起来是最简单的，但是往往也是最难的。
+
+
+### 04.忽略长远的收益
+- 明明付出了努力，却不知道付出的努力到哪里去了。不安心这么生活下去，却又没行动力改变现状。
+- 想要看几本书，让好好推荐一下，列了份书单，没过多久你又说这些书实在太枯燥又冗长，全部看完太消耗时间，还不如看网上小说；想要去旅行，到处搜集旅行的资料，可你又说没订到票，又实在抽不开时间；梦想出本书，发来几千字让给些意见，可没多久你又说没灵感又太累了，还是算了……
+- 好吧，你说没时间看书，那你每天睡前玩手机的时间为什么不能用来看书呢？看小说看新闻看八卦，你又是哪来的时间看的呢？你说你没有订到票，那你之前在计划的时候为什么不马上行动呢？你说你想要写书，可是又不愿意下笔去写，那又能怎么办呢？
+- 人就是这样，眼前的利益实在太诱人，导致忽略了长远的未来。所以才会为了一个眼前的事而义无反顾，却无法为了一个说不清道不明的未来而万死不辞。好比你听了一个励志的演讲觉得慷慨激昂，立马拿出要写下目标好好学习，可是怎么也没能坚持下来。
+
 
 
 ### 05.掌控心态很重要
