--- a/Read/ReadShareWiki/06.职场总结/02.职场晋升的规则.md
+++ b/Read/ReadShareWiki/06.职场总结/02.职场晋升的规则.md
@@ -125,6 +125,13 @@
 
 
 ### 05.主动揽活和思考
+#### 5.1 看一个案例分析
+- 主动的核心是如何提升自己的认知和工作目的性，而不是如何要求别人必须配合你和支持你。如果你主动的目标是完全基于自我实现和自我提升，没理由会碰壁，往往是因为涉及过多对他人的要求，才会遇到这个问题。当然，适当提升获得他人支持和配合的能力是有必要的，但前提是信任，你没有获得他人信任之前，这是很难做到的。
+- 先来看一个场景：某个项目或系统存在一些问题，老板或上司希望我解决掉它。这时候，很多时候，工作的目标并不是解决问题，而是解决老板的认知。比如遮掩问题，比如用临时方案去处理，而不考虑未来可能的潜在风险。如果你是个草根创业者，你上线了自己的产品并获得了一定的种子用户，你现在发现服务器频繁崩溃，你可能会先写一个自动重启脚本来拯救自己近期的睡眠，但绝不会止步于此，一定会深究原因，直到彻底查明并解决掉才会踏实。态度不同，这里的处理方式和思考深度，是完全不同的。
+- 再来看第二个场景：某个项目和系统可能存在问题，老板要我搞清楚。很多时候，所谓搞清楚，只是为了解答老板的疑惑，比如老板说，为什么广告投放转换效率这么差，或者为什么订单转化成本这么高。你找来几个同行数据发给老板，季节因素，行情价，其他大客户在投放竞价，目标是自圆其说，老板挑不出毛病，工作就完成了。但如果项目是自己的，投放的钱是自己出的，这就不一样，虽然前面的解释也都看到，但还是会深究，究竟哪个渠道数据有水分，哪个素材可能拉低了均值，一定是不达目的不罢休的深究。前者的目标是，和同行差不多就行了，而后者呢，那就不会停留在这样的目标上了。
+- 什么才是你的目标，两个场景，可能有助于理解，当你基于自己的目标，真的深究一个事情，试图去搞明白一个问题，试图去彻底解决一个问题，你所进行的思考深度，所分析的信息广度，会远远高于你为了应付别人安排所做的同样事情。而在这个过程中，你的成长速度，也会远远高于其他人。
+
+
 #### 5.1 主动思考和提升
 - 比如这段代码再实现一遍，还有哪些地方是可以优化的？这个系统现在的运行情况还能不能再改善？除了写代码，我还应该再学习些别的东西吗？我跟行业里的顶尖水平差距在哪里，该怎么弥补？
 - 常常去思考这些问题，时时拷问自己，发现自己的不足之处，然后有目的地去补足，不断提高自己的竞争优势。
@@ -141,7 +148,6 @@
 - 一位实习生开始接手客服工作，她几乎回复了用户发来的每一个问题，不明白的就和产品研发沟通，尽可能给用户满意的答复，在没有要求的节假日也会处理客服问题。
 - 在这个期间她对公司的产品有了详尽的了解，不仅如此，她还和运营的同学一起组织了客服标准话术，分门别类整理反馈问题给研发和产品做参考，和运营团队一起构建客服规范等等，对业务的发展起到了非常重要的作用。
 - 什么是牛人，就是交给他/她一件事，做成了，还做得挺好。然后再去做另一件更重要的事，又做成了。让正确的事持续发生。
-
 
 
 
