--- a/Read/ReadShareWiki/01.出发启程/05.经营好自我公司.md
+++ b/Read/ReadShareWiki/01.出发启程/05.经营好自我公司.md
@@ -12,14 +12,13 @@
 
 ### 01.对待工作的态度
 - 不知道你有没有注意到，关于如何对待工作，大约有两种对立的思想。一种是所谓的“奋斗党”，对工作充满热情，会主动想办法甚至加班加点去完成工作、解决问题，认为人生因为拼搏奋斗而变得更加有意义；一种是所谓的“咸鱼党”，秉持着给多少钱干多少事儿的态度，多出一分力都觉得自己亏了，觉得咸鱼的人生才是真正为自己活着。
-- 这两种想法，其实都是自己的人生选择，但它们背后的核心思想是“我在为谁而工作”。
+- 这两种想法，其实都是自己的人生选择，但它们背后的核心思想是“我在为谁而工作”。主动性的学习和工作是为了提升自己，获得更强大的竞争力，而不只是为了一份工作或者一个老板。
 
 
 
 ### 02.我在为谁而工作
 - 换一个视角，把自己当成一家公司一样来经营，经营自己的工作和人生，可能就会有完全不同的体会。在这个视角下，老板就是你的客户，你的工作就是你为客户提供的产品或服务，而跳槽就是换客户。
 - 想要把自己的人生公司经营成什么样呢？怎么做才能经营好自己的人生公司呢？可能需要学会明确自己的核心价值，为自己设定方向和目标，确定自己的工作流程、规范和原则，建立自己的人脉关系，掌控自己的资金流等等，全权为自己负责。
-
 
 
 ### 03.要有自己的价值
