--- a/Read/ReadShareWiki/02.计划管理/03.计划的落地策略.md
+++ b/Read/ReadShareWiki/02.计划管理/03.计划的落地策略.md
@@ -7,6 +7,8 @@
 - 06.将工作任务细化
 - 07.小目标层层递进
 - 08.小目标分成todo
+- 09.坚持15分钟法则
+
 
 
 ### 01.先来看几个故事
@@ -58,5 +60,10 @@
 - 准备一个TODO笔记，把学什么这个问题抛给日常生活中。比如坐地铁的时候，看微信推送的文章，遇到自己没了解过的，把关键词记下来。
 - 在工作中，偶尔搜索问题的时候，发现自己一些某些未了解过的知识的时候，先记下来关键字；工作完成后，凭着关键字再回来学习。看书过程中，可能也会遇到一些点，书上写的不是非常的清晰，但是的确自己不了解，记下关键字。
 
+
+### 09.坚持15分钟法则
+- **15分钟法则**。可能有些人，回到家中已经满身疲惫，什么事都不想干。最多就刷刷短视频消遣，哪还有心思，去做学习、锻炼、赚钱这种烧脑费力的事情。
+- 以前在书上看到的，跟大家分享一个秘诀，简单好用，就是「15分钟法则」。这期间，不要碰手机，提前把信息处理好。马上坐到书桌前，告诉自己，做一件有意义的事（提前做好计划）：回顾笔记、看经典书也好、罗列todo，按照自己的志趣，安排你业余时间的1个15分钟。**记住，这期间，不要碰手机**。你会发现一个神奇的现象：一旦你的身体启动学习机制，你会发现坚持下去，并没有那么难。
+- 开启节奏然后坚持，习惯了这种节奏以后，慢慢地你会爱上这种疲惫又充实的感觉。不用半个月，会轻松读完一本优质的书籍，听完一门有益的课程，逐步学会一门有趣的技能。这种久违的撕裂成长感，会比沉迷于浅层的消遣，要爽太多了。
 
 
