--- a/Read/ReadMeWiki/01.大型方案/21.通知栏方案设计实践.md
+++ b/Read/ReadMeWiki/01.大型方案/21.通知栏方案设计实践.md
@@ -1,11 +1,11 @@
 #### 目录介绍
 - 01.整体概述
     - 1.1 项目背景
-    - 1.2 遇到问题
+    - 1.2 遇到问题记录
     - 1.3 基础概念介绍
     - 1.4 设计目标
     - 1.5 产生收益分析
-- 02.通知栏发展介绍
+- 02.通知栏基础介绍
     - 2.1 为何适配通知栏
     - 2.2 通知栏前期困境
     - 2.3 系统8.0的适配
@@ -20,6 +20,7 @@
     - 3.5 删除通知栏渠道
     - 3.5 显示未读的图标
     - 3.7 前台服务通知栏
+    - 3.8 设置锁屏通知栏
 - 04.通知栏遇到的坑
     - 4.1 缺少属性不显示通知栏
 - 05.通用方案思路
@@ -43,15 +44,13 @@
 ### 01.整体概述
 #### 1.1 项目背景
 - **Notification通知用途**
-    - 显示接收到短消息、及时消息等信息（如QQ、微信、新浪、短信）
-    - 显示客户端的推送消息，如广告、优惠、版本更新、推荐新闻等，常用的第三方 SDK 有：JPush 、网易云信(偏重 IM ) 、阿里云推送
-    - 显示正在进行的事物，例如：后台运行的程序，如音乐播放进度、下载进度等
-    - 前两点可以归结为与用户交互，第三点是实时的任务提醒，但不可否认的是，第三点也会与用户交互。
+    - 显示接收到短消息、及时消息等信息；显示客户端的推送消息，如广告、优惠、版本更新、推荐新闻等，与用户交互
+    - 显示正在进行的事物，例如：后台运行的程序，如音乐播放进度、下载进度等，实时的任务提醒，也会与用户交互
 - 通知栏使用场景众多，针对通知栏8.0适配，通知栏channel管理等，打造一款通用通知栏适配方案比较重要。
 
 
 
-#### 1.2 遇到问题
+#### 1.2 遇到问题记录
 - Android O(8.0)通知的改变
     - NotificationChannel是android8.0新增的特性，如果App的targetSDKVersion>=26，没有设置channel通知渠道的话，就会导致通知无法展示。
     - 如果不适配，则报错内容：Failed to post notification on channel “null” Target Api is 26
@@ -63,7 +62,7 @@
 #### 1.3 基础概念介绍
 - 普通Notification：发出通知后，通知会先以图标的形式显示在状态栏中。
 - 折叠式Notification：折叠式Notification是一种自定义视图的Notification，用来显示长文本和一些自定义的布局的场景。它有两种状态，一种是普通状态下的视图，一种是展开状态下的视图。
-- 悬挂式Notification：Head up通知，android5.0新增，悬挂式Notification不需要下拉通知栏就直接显示出来悬挂在屏幕上方并且焦点不变仍在用户操作的界面因此不会打断用户的操作，过几秒就会自动消失。
+- 悬挂式Notification：Head up通知，android5.0新增，悬挂式Notification不需要下拉通知栏就直接显示出来悬挂在屏幕上方并且焦点不变仍在用户操作的界面因此不会打断用户的操作，过几秒就会自动消失。这种行为通常适用于用户应立即知晓的重要通知，而且仅在设备未锁定时才会显示。
 
 
 #### 1.4 设计目标
@@ -73,7 +72,7 @@
 
 
 
-### 02.通知栏发展介绍
+### 02.通知栏基础介绍
 #### 2.1 为何适配通知栏
 - 通知栏的设计确实非常巧妙
     - 它默认情况下不占用任何空间，只有当用户需要的时候用手指在状态栏上向下滑动，通知栏的内容才会显示出来，这在智能手机发展的初期极大地解决了手机屏幕过小，内容展示区域不足的问题。
@@ -86,7 +85,7 @@
 
 #### 2.2 通知栏前期困境
 - 通知栏又还是有用处的，比如我们收到微信、短信等消息的时候，确实需要通知栏给我们提醒。
-- 因此分析下来，通知栏目前最大的问题就是，无法让用户对感兴趣和不感兴趣的消息进行区分。
+    - 因此分析下来，通知栏目前最大的问题就是，无法让用户对感兴趣和不感兴趣的消息进行区分。
 - 举一个小案例
     - 就比如说，我希望淘宝向我推送卖家发货和物流的相关消息，但是我不想收到那些打折促销或者是让我去买衣服的这类消息。那么就目前来说，是没有办法对这些消息做区分的，我要么同意接受所有消息，要么就屏蔽所有消息，这是当前通知栏的痛点。
 
@@ -94,8 +93,7 @@
 
 #### 2.3 系统8.0的适配
 - 从Android 8.0系统开始，Google引入了通知渠道这个概念。
-- 什么是通知渠道呢？顾名思义，就是每条通知都要属于一个对应的渠道。
-    - 每个App都可以自由地创建当前App拥有哪些通知渠道，但是这些通知渠道的控制权都是掌握在用户手上的。用户可以自由地选择这些通知渠道的重要程度，是否响铃、是否振动、或者是否要关闭这个渠道的通知。
+    - 什么是通知渠道呢？顾名思义，就是每条通知都要属于一个对应的渠道。每个App都可以自由地创建当前App拥有哪些通知渠道，但是这些通知渠道的控制权都是掌握在用户手上的。用户可以自由地选择这些通知渠道的重要程度，是否响铃、是否振动、或者是否要关闭这个渠道的通知。
 - 设置通知栏channel好处
     - 拥有了这些控制权之后，用户就再也不用害怕那些垃圾推送消息的打扰了，因为用户可以自主地选择自己关心哪些通知、不关心哪些通知。
 - 举一个例子，谷歌地图
@@ -116,8 +114,7 @@
 - 如何实现悬挂式通知
     - 对于实现效果众说纷纭，大多倾向于调用NotificationCompat.Builder的方法setFullScreenIntent。但在不同机器上，似乎实现效果也不尽相同。
 - 使用Heads Up Notification也有必要前提条件。
-    - Android API >=21，即5.0以上
-    - 需要在设置中开启横幅通知权限（在设置通知管理中，不同机型可能存在差异）
+    - Android API >=21，即5.0以上；需要在设置中开启横幅通知权限（在设置通知管理中，不同机型可能存在差异）
     - 需要设置震动或声音。（必须！）；需要设置Notification为最高权限。（必须！）
 
 
@@ -304,6 +301,8 @@
     - 通过崩溃日志，定位到 ActiveServices 类 中的 serviceForegroundTimeout方法，还有 serviceForegroundCrash
 
 
+
+#### 3.8 设置锁屏通知栏
 
 
 
