--- a/Read/ReadMeWiki/00.方案实践/18.App稳定性专项实践.md
+++ b/Read/ReadMeWiki/00.方案实践/18.App稳定性专项实践.md
@@ -250,20 +250,18 @@
 
 
 #### 5.5 重新发版
-客户端重新发布版本对用户影响较大，且生效时间漫长（这其中包括了应用市场审核的时间、版本重新放量的时间、以及用户设备上的版本最终更新的时间）。
-在采用这种方式时：
-研发要基于发版代码重新构建修复问题的版本，同时修改版本号，并完成自测。
-QA 验证新版本，回归核心功能。
-双方验证完成后，提交应用市场，等待审核。
-审核后配合灰度机制，观察线上情况，直到恢复正常。
+- 客户端重新发布版本对用户影响较大，且生效时间漫长（这其中包括了应用市场审核的时间、版本重新放量的时间、以及用户设备上的版本最终更新的时间）。在采用这种方式时：
+    - 研发要基于发版代码重新构建修复问题的版本，同时修改版本号，并完成自测。
+    - QA 验证新版本，回归核心功能。
+    - 双方验证完成后，提交应用市场，等待审核。
+    - 审核后配合灰度机制，观察线上情况，直到恢复正常。
 
 
 
 #### 5.6 总结与复盘
-总结与复盘的目的在于发现需要优化和改善的地方，从而在后续工作中更好地预防和处理。
-首先，请正确认识复盘的意义，并努力克服归咎他人的本能。
-当故障被修复后，通过系统性的总结和回顾故障发生时所采取的措施，能帮助我们去发现现有系统、流程中存在的问题，同时思考对应的解决方案。通过不断地完善整个系统和流程，才能避免后续同类型问题的再次发生。
-复盘时通常需要详细记录故障发生时具体的时间点由谁采取了什么样的措施，这种形式的场景还原有助于我们分析和判断当时的措施是否恰当，有没有影响到故障的及时处理，是否有可优化的空间等。
+- 总结与复盘的目的在于发现需要优化和改善的地方，从而在后续工作中更好地预防和处理。首先，请正确认识复盘的意义，并努力克服归咎他人的本能。
+- 当故障被修复后，通过系统性的总结和回顾故障发生时所采取的措施，能帮助我们去发现现有系统、流程中存在的问题，同时思考对应的解决方案。通过不断地完善整个系统和流程，才能避免后续同类型问题的再次发生。
+- 复盘时通常需要详细记录故障发生时具体的时间点由谁采取了什么样的措施，这种形式的场景还原有助于我们分析和判断当时的措施是否恰当，有没有影响到故障的及时处理，是否有可优化的空间等。
 
 
 ### 06.稳定性方案落地
