--- a/Read/ReadShareWiki/01.出发启程/04.要带上技能地图.md
+++ b/Read/ReadShareWiki/01.出发启程/04.要带上技能地图.md
@@ -6,6 +6,7 @@
 - 05.技能地图的演变
 
 
+
 ### 01.为何要技能地图
 - 有的人经常会说一定要找到一份月薪多少多少的工作，争取做到什么什么职位，未来要赚多少的钱。耐心听完“远大蓝图”，然后想一想：“凭什么达到自己的目标？你的资本是什么？”
 - 如果是你，你该怎么回答这个问题？有着自己的伟大抱负，你有没有想到，要实现这些目标，你的资本是什么？**对于很多已经身在职场的朋友而言，你晋升的资本又是什么**？　　
@@ -20,6 +21,7 @@
 - 掌握，意味着是一开始就要求熟练掌握的硬技能，这是生存之本。而至于掌握的深度，是动态的，倒是可以在行进过程中不断去迭代加深。
 - 熟练，在你掌握一门技能或者某个知识点的情况下，还要经过大量的训练，并且把东西做好，才能让你把东西吸收。
 - 精通，相比熟练更进一步。比如你做了某个方案，你还要知道为什么这样做，和其他方案对比优缺点分析，遇到那么困难以及如何解决等。
+- 综合应用，结合实际多个知识点，在实践中能够形成一套自己的方案，运用所掌握的知识，搞定一件大的方案实践。
 
 
 ### 03.绘制自己的地图
