--- a/Read/ReadShareWiki/06.职场总结/02.职场晋升的规则.md
+++ b/Read/ReadShareWiki/06.职场总结/02.职场晋升的规则.md
@@ -132,22 +132,31 @@
 - 什么才是你的目标，两个场景，可能有助于理解，当你基于自己的目标，真的深究一个事情，试图去搞明白一个问题，试图去彻底解决一个问题，你所进行的思考深度，所分析的信息广度，会远远高于你为了应付别人安排所做的同样事情。而在这个过程中，你的成长速度，也会远远高于其他人。
 
 
-#### 5.1 主动思考和提升
+#### 5.2 主动思考和提升
 - 比如这段代码再实现一遍，还有哪些地方是可以优化的？这个系统现在的运行情况还能不能再改善？除了写代码，我还应该再学习些别的东西吗？我跟行业里的顶尖水平差距在哪里，该怎么弥补？
 - 常常去思考这些问题，时时拷问自己，发现自己的不足之处，然后有目的地去补足，不断提高自己的竞争优势。
 
 
 
-#### 5.2 主动承担思考
+#### 5.3 主动承担思考
 - 需要和上级领导保持良好的沟通，明确你们这个小团队要做些什么，甚至整个公司要做什么。这样，你才能确定优先级，去做那些对公司而言价值更高、影响力更大的工作，跟上整个团队前进的步调。
 - 在事情干不完的大背景下，如果想对团队的贡献更多，就应该善于找到最重要的工作，并且优先完成它们，而这恰恰是一些新员工都欠缺的技能，也是你能否成长为合格的技术骨干的关键所在。
 
 
 
-#### 5.3 做事精益求精
+#### 5.4 做事精益求精
 - 一位实习生开始接手客服工作，她几乎回复了用户发来的每一个问题，不明白的就和产品研发沟通，尽可能给用户满意的答复，在没有要求的节假日也会处理客服问题。
 - 在这个期间她对公司的产品有了详尽的了解，不仅如此，她还和运营的同学一起组织了客服标准话术，分门别类整理反馈问题给研发和产品做参考，和运营团队一起构建客服规范等等，对业务的发展起到了非常重要的作用。
 - 什么是牛人，就是交给他/她一件事，做成了，还做得挺好。然后再去做另一件更重要的事，又做成了。让正确的事持续发生。
+
+
+#### 5.5 愿意为工作拼
+- 不是说要鼓励你加班，但如果你在职场里不得不面临加班，为什么不选择一个你喜欢的事情来做。
+- 一个信息安全专家，在休假的时候，灵光一闪，想到某系统存在一种缓冲区溢出可能性，你说他会怎么做，算了，回去上班再说？人家肯定会尽快找个地方拿出电脑来核对一下，看看自己的想法是不是可以实现，生怕被同行抢先公布出来，这种成就感，不是老板给多少钱工资带来的，这是人家骨子里的热爱和荣耀。
+- 一个热爱产品运营的人，他出去陪老婆逛街的时候都会研究别人店铺的运营手段和产品策略。
+- 一个痴迷技术问题的人，他逛淘宝，刷微博的时候都会测试一下典型的搜索或翻页问题，思索巨头背后的技术手段是什么。如果是前端架构师，还会看一下页面源代码，甚至追踪一下请求的header信息，看看对方代码里对加载调优做了什么，有没有自己不知道的黑科技。
+- 如果你痴迷一个东西，你成长会特别快，因为你不会介意这是不是为了工作，谁给你付工资。你不喜欢的工作，前景再好，你研究不下去，也只能是挣扎在底层，等着被新一轮年轻人碾压下去。
+- 很多人也会说，我不喜欢当前的工作，我想去做什么什么，说实话，很多人并不是真的想去做什么，只是想找借口逃避当前的职场困境。
 
 
 
