--- a/Read/ReadShareWiki/00.综合专项/04.排查问题模板.md
+++ b/Read/ReadShareWiki/00.综合专项/04.排查问题模板.md
@@ -1,10 +1,11 @@
 #### 目录介绍
 - 01.问题背景说明
-    - 1.1 问题简述说
-    - 1.2 核心堆栈信息
-    - 1.3 报错代码
+    - 1.1 问题截图
+    - 1.2 问题描述
+    - 1.3 核心堆栈信息
 - 02.问题分析链路
-    - 2.1 堆栈分析
+    - 2.1 出现bug说明
+    - 2.2 猜想和bug验证
     - 2.2 代码核心链路
 - 03.复现问题步骤
     - 3.1 如何复现
@@ -12,10 +13,12 @@
 - 04.问题原因
     - 4.1 说明报错原因
     - 4.2 说明事故原因
+    - 4.3 问题根本原因
 - 05.解决方案
     - 5.1 临时止损方案
     - 5.2 解决方案对比
-    - 5.3 验证问题自测
+    - 5.3 优化代码说明
+    - 5.4 验证问题自测
 - 06.事后复盘总结
     - 6.1 影响范围
     - 6.2 是否有同类问题
@@ -23,6 +26,67 @@
     - 6.4 总结输出
     
 
+### 01.问题背景说明
+#### 1.1 问题截图
+
+
+#### 1.2 问题描述
+
+
+#### 1.3 核心堆栈信息
+
+
+### 02.问题分析链路
+#### 2.1 出现bug说明
+
+
+#### 2.2 猜想和bug验证
+
+
+#### 2.2 代码核心链路
+
+
+### 03.复现问题步骤
+#### 3.1 如何复现
+
+
+#### 3.2 模拟场景分析
+
+
+### 04.问题原因
+#### 4.1 说明报错原因
+
+
+#### 4.2 说明事故原因
+
+
+#### 4.3 问题根本原因
+
+
+### 05.解决方案
+#### 5.1 临时止损方案
+
+
+#### 5.2 解决方案对比
+
+
+#### 5.3 优化代码说明
+
+
+#### 5.4 验证问题自测
+
+
+### 06.事后复盘总结
+#### 6.1 影响范围
+
+
+#### 6.2 是否有同类问题
+
+
+#### 6.3 如何避免
+
+
+#### 6.4 总结输出
 
 
 
