--- a/Read/ReadMeWiki/01.大型方案/21.通知栏方案设计实践.md
+++ b/Read/ReadMeWiki/01.大型方案/21.通知栏方案设计实践.md
@@ -10,8 +10,7 @@
     - 2.2 通知栏前期困境
     - 2.3 系统8.0的适配
     - 2.4 一定适配8.0吗
-    - 2.5 通知栏三种样式
-    - 2.6 悬挂式通知失效
+    - 2.5 悬挂式通知失效
 - 03.通知栏简单实践
     - 3.1 创建通知的渠道
     - 3.2 发送通知栏操作
@@ -107,7 +106,6 @@
 - 这个时候如果还不使用通知渠道的话，那么你的App的通知将完全无法弹出。因此这里给大家的建议就是，一定要适配。
 
 
-#### 2.5 通知栏三种样式
 
 
 #### 2.6 悬挂式通知失效
@@ -131,32 +129,10 @@
 #### 3.1 创建通知的渠道
 ##### 3.3.1 通知栏渠道创建
 - 简单代码如下所示：
-    ```
-    private void createChannel(){
-        if (Build.VERSION.SDK_INT >= Build.VERSION_CODES.O) {
-            String channelId = "chat";
-            String channelName = "通知消息";
-            int importance = NotificationManager.IMPORTANCE_HIGH;
-            createNotificationChannel(channelId, channelName, importance);
-    
-            channelId = "email";
-            channelName = "通知邮件";
-            importance = NotificationManager.IMPORTANCE_DEFAULT;
-            createNotificationChannel(channelId, channelName, importance);
-  
-            channelId = "subscribe";
-            channelName = "通知订阅";
-            importance = NotificationManager.IMPORTANCE_DEFAULT;
-            createNotificationChannel(channelId, channelName, importance);
-        }
-    }
-    
+    ``` java
     @TargetApi(Build.VERSION_CODES.O)
     private void createNotificationChannel(String channelId, String channelName, int importance) {
         NotificationChannel channel = new NotificationChannel(channelId, channelName, importance);
-        if (mNotificationManager==null){
-            mNotificationManager = (NotificationManager) getSystemService(NOTIFICATION_SERVICE);
-        }
         mNotificationManager.createNotificationChannel(channel);
     }
     ```
@@ -170,12 +146,11 @@
 ##### 3.3.2 通知栏优先级
 - 为何要设置优先级
     - 模拟了这样一个场景。想象一下我们正在开发一个类似于微信的App，其中App通知主要可以分为两类：
-    - 一类是我和别人的聊天消息，这类消息非常重要，因此重要等级我设为了IMPORTANCE_HIGH。
-    - 另一类是公众号的订阅消息，这类消息不是那么重要，因此重要等级我设为了IMPORTANCE_DEFAULT。
-    - 除此之外，重要等级还可以设置为IMPORTANCE_LOW、IMPORTANCE_MIN，分别对应了更低的通知重要程度。
+    - 一类是我和别人的聊天消息，这类消息非常重要，因此重要等级我设为了`IMPORTANCE_HIGH`。
+    - 另一类是公众号的订阅消息，这类消息不是那么重要，因此重要等级我设为了`IMPORTANCE_DEFAULT`。
+    - 除此之外，重要等级还可以设置为`IMPORTANCE_LOW`、`IMPORTANCE_MIN`，分别对应了更低的通知重要程度。
 - 然后查看设置中心app通知
     - 运行成功之后我们关闭App，进入到设置 -> 应用 -> 通知当中，查看这个App的通知界面，如下图所示：
-    - 图片
     - 可以看到，由于这两个通知渠道的重要等级不同，通知的行为也是不同的，聊天消息可以发出提示音并在屏幕上弹出通知，而订阅消息只能发出提示音。
 
 
@@ -185,18 +160,13 @@
 
 
 #### 3.2 发送通知栏操作
+##### 3.2.1 如何发送通知栏
 - 触发通知的代码和之前版本基本是没有任何区别的，只是在构建通知对象的时候，需要多传入一个通知渠道ID，表示这条通知是属于哪个渠道的。
     - 注意点1：在NotificationCompat.Builder中需要多传入一个通知渠道ID，那么这里我们分别传入了chat和subscribe渠道ID。
-    ```
+    ``` java
     public void sendChatMsg() {
-        NotificationManager manager = (NotificationManager) getSystemService(NOTIFICATION_SERVICE);
         Notification notification = new NotificationCompat.Builder(this, "chat")
-                .setContentTitle("收到聊天消息")
-                .setContentText("在吗，找你有事情")
-                .setWhen(System.currentTimeMillis())
-                .setSmallIcon(R.drawable.ic_notification_music_logo)
-                .setLargeIcon(BitmapFactory.decodeResource(getResources(), R.drawable.ic_notification_music_logo))
-                .setAutoCancel(true)
+                //省略部分代码
                 .build();
         manager.notify(1, notification);
     }
@@ -207,17 +177,19 @@
     - 提醒通知：创建通知栏channel时，由于消息，这是一条重要等级高的通知，因此会使用这种屏幕弹窗的方式来通知用户有消息到来。
     - 静音通知：接下来点击发送邮件通知按钮，你会发现现在屏幕上不会弹出一条通知提醒了，只会在状态栏上显示一个小小的通知图标
     - 图4，图5
-- Android8.0通知的变化
+
+
+##### 3.2.1 Android8.0通知的变化
+- 图7
+- 快速向左或者向右滑动可以关闭一条通知，但如果你缓慢地向左或者向右滑动，就会看到这样两个按钮：
+    - 一个是时钟延迟，另一个是设置按钮
+- 时钟延迟按钮
+    - 左边那个时钟图标的按钮可以让通知延迟显示。比方说这是一条比较重要的通知，但是我暂时没时间看，也不想让它一直显示在状态栏里打扰我，我就可以让它延迟一段后时间再显示，这样我就暂时能够先将精力放在专注的事情上，等过会有时间了这条通知会再次显示出来，我不会错过任何信息。如下所示：
     - 图7
-    - 快速向左或者向右滑动可以关闭一条通知，但如果你缓慢地向左或者向右滑动，就会看到这样两个按钮：
-        - 一个是时钟延迟，另一个是设置按钮
-    - 时钟延迟按钮
-        - 左边那个时钟图标的按钮可以让通知延迟显示。比方说这是一条比较重要的通知，但是我暂时没时间看，也不想让它一直显示在状态栏里打扰我，我就可以让它延迟一段后时间再显示，这样我就暂时能够先将精力放在专注的事情上，等过会有时间了这条通知会再次显示出来，我不会错过任何信息。如下所示：
-        - 图7
-    - 设置按钮
-        - 右边那个设置图标的按钮就可以用来对通知渠道进行屏蔽和配置了，用户对每一个App的每一个通知渠道都有绝对的控制权，可以根据自身的喜好来进行配置和修改。如下所示：
-        - 图8
-        - 比如说我觉得订阅消息老是向我推荐广告，实在是太烦了，我就可以将订阅消息的通知渠道关闭掉。这样我以后就不会再收到这个通知渠道下的任何消息，而聊天消息却不会受到影响，这就是8.0系统通知渠道最大的特色。
+- 设置按钮
+    - 右边那个设置图标的按钮就可以用来对通知渠道进行屏蔽和配置了，用户对每一个App的每一个通知渠道都有绝对的控制权，可以根据自身的喜好来进行配置和修改。如下所示：
+    - 图8
+    - 比如说我觉得订阅消息老是向我推荐广告，实在是太烦了，我就可以将订阅消息的通知渠道关闭掉。这样我以后就不会再收到这个通知渠道下的任何消息，而聊天消息却不会受到影响，这就是8.0系统通知渠道最大的特色。
 
 
 #### 3.3 管理通知栏渠道
