--- a/Read/ReadShareWiki/01.出发启程/02.需求层次的模型.md
+++ b/Read/ReadShareWiki/01.出发启程/02.需求层次的模型.md
@@ -18,11 +18,13 @@
 ### 02.人生的需求模型
 - 上世纪四十年代（1943 年）美国心理学家亚伯拉罕·马斯洛在《人类激励理论》中提出了需求层次理论模型，它是行为科学的理论之一。
 - 需求层次理论是解释人格的重要理论，也是解释动机的重要理论。该理论认为个体成长发展的内在力量是动机，而动机是由多种不同性质的需要所组成，各种需要之间，有先后顺序与高低层次之分，每一层次的需要与满足，将决定个体人格发展的境界或程度。
-- 1）生理需要，是个人生存的基本需要，如吃、喝、住处。
-- 2）安全需要，包括心理上与物质上的安全保障，如不受盗窃的威胁，预防危险事故，职业有保障，有社会保险和退休基金等。
-- 3）社交需要。人是社会的一员，需要友谊和群体的归宿感，人际交往需要彼此同情、互助和赞许。
-- 4）尊重需要，包括要求受到别人的尊重和自己具有内在的自尊心。
-- 5）自我实现需要，指通过自己的努力，实现自己对生活的期望，从而对生活和工作真正感到很有意义。
+- 然后来看一下下面的需求层次思维导图：
+    - ![image.png](https://p3-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/e222d2c654d14026905fe29a13aeeb97~tplv-k3u1fbpfcp-watermark.image?)
+- 看层次图中1，生理需要，是个人生存的基本需要，如吃、喝、住处。
+- 看层次图中2，安全需要，包括心理上与物质上的安全保障，如不受盗窃的威胁，预防危险事故，职业有保障，有社会保险和退休基金等。
+- 看层次图中3，社交需要。人是社会的一员，需要友谊和群体的归宿感，人际交往需要彼此同情、互助和赞许。
+- 看层次图中4，尊重需要，包括要求受到别人的尊重和自己具有内在的自尊心。
+- 看层次图中5，自我实现需要，指通过自己的努力，实现自己对生活的期望，从而对生活和工作真正感到很有意义。
 - 人在满足了基本的需求之后，就要去实现更高的需求和目标。一个人可以有自我实现的愿望，但要达到自我实现的境界，成为一个自我实现的人，却不是每个人都能办到的，这种人也只是少数而已。
 
 
@@ -68,6 +70,11 @@
 - 自我实现需求；激励措施：设计工作时运用复杂情况的适应策略，给有特长的人委派特别任务，在设计工作和执行计划时为下级留有余地。
 
 
+#### 6.3 自我实践导图
+- ![image.png](https://p1-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/34d239b7dbe24c4fb9d8d4684c70e12a~tplv-k3u1fbpfcp-watermark.image?)
+
+
+
 ### 07.最后做一些题目
 #### 7.1 自我分析需求
 - 分析一下自己目前处在那个层次，然后着手准备超那个层次发展，怎么去做，说说自己对马斯洛需求的理解。
@@ -75,7 +82,6 @@
 
 #### 7.2 看几个案例
 - 1.小明很努力，但是工作还是没发做上高管，小康达到但是没能实现个人社会价值，成为世俗眼中的成功者。请用马斯洛需求层次分析该案例。
-- 2.红军长征2万多公里，为了革命，用马斯洛需求层次能够解释嘛？谈谈自己的看法？
 
 
 
