--- a/Read/ReadMeWiki/01.大型方案/13.Task统计耗时实践.md
+++ b/Read/ReadMeWiki/01.大型方案/13.Task统计耗时实践.md
@@ -134,5 +134,6 @@
 
 - Gradle学习(八) 统计Task执行时长
     - https://blog.csdn.net/chennai1101/article/details/103280523/
-
+- plugin插件开发
+    - https://blog.csdn.net/AdrianAndroid/article/details/120151931
 
