--- a/Read/ReadMeWiki/01.大型方案/23.隐私合规优化实践.md
+++ b/Read/ReadMeWiki/01.大型方案/23.隐私合规优化实践.md
@@ -1,7 +1,7 @@
 #### 目录介绍
 - 01.整体概述
     - 1.1 项目背景
-    - 1.2 遇到问题
+    - 1.2 合规处理方式
     - 1.3 基础概念介绍
     - 1.4 设计目标
     - 1.5 产生收益分析
@@ -12,7 +12,9 @@
     - 3.1 早期的注册权限
     - 3.2 动态权限授予
 - 04.隐私合规检测
+    - 4.1 隐私合规检查什么
 - 05.隐私和权限遇到坑
+    - 5.1 
 - 06.方案基础设计
     - 6.1 整体架构图
     - 6.2 UML设计图
@@ -31,6 +33,9 @@
 
 ### 01.整体概述
 #### 1.1 项目背景
+- 最关键的问题是用户同意隐私协议之前，不能有收集用户隐私信息的行为，例如获取deviceId、androidId等信息，除此之外，对于频繁申请权限、超范围申请权限也是需要注意的。
+- 除了开迭代针对性整改，从技术角度思考，有没有一劳永逸的办法，杜绝隐私调用不合规问题呢？
+
 
 
 #### 1.2 遇到问题
