--- a/Read/ReadMeWiki/01.大型方案/47.Hook疑难问题实践.md
+++ b/Read/ReadMeWiki/01.大型方案/47.Hook疑难问题实践.md
@@ -1,2 +1,39 @@
 #### 目录介绍
+- 03.运行期Hook技术
+- 04.编译器Hook技术
+
+
+
+### 03.运行期Hook技术
+#### 3.1 Xposed
+- 如果你对Xposed比较熟悉，并且手头有个root的设备安装了Xposed框架，那么直接开发一个Xposed模块来hook指定方法就可以了。
+- 由于我的测试设备是有root权限的，Xposed方案对我来说难度不大，不过对于普通用户，有没有免root的方式呢？
+
+
+
+#### 3.2 VirtualXposed
+- VirtualXposed 是基于VirtualApp 和 epic 在非ROOT环境下运行Xposed模块的实现（支持5.0~10.0)。
+    - https://github.com/android-hacker/VirtualXposed
+- VirtualXposed其实就是一个支持Xposed的虚拟机，我们把开发好的Xposed模块和对应需要hook的App安装上去就能实现hook功能。
+
+
+
+#### 3.3 epic
+- 在ART上重新实现了Dexposed，有着与Dexposed完全相同的能力和API，项目地址是epic。https://github.com/tiann/epic
+- 所以如果不想折腾 Xposed 或者 VirtualXposed，只要在应用内接入epic，就可以实现应用内Xposed hook功能，满足运行hook需求。
+- epic 存在兼容性问题，例如Android 11 只支持64位App，所以建议只在debug环境使用。
+
+
+
+### 04.编译器Hook技术
+
+
+
+
+
+
+
+
+
+
 
