--- a/Read/ReadMeWiki/01.大型方案/01.组件化开发优化实践.md
+++ b/Read/ReadMeWiki/01.大型方案/01.组件化开发优化实践.md
@@ -196,7 +196,7 @@
 
 
 #### 4.6 关于依赖优化
-- 查看依赖包，在项目根目录下执行如下命令，将依赖导出到文件：
+- 查看依赖树，在项目根目录下执行如下命令，将依赖导出到文件：
     ``` java
     ./gradlew app:dependencies > log_depend.txt
     ```
@@ -206,7 +206,7 @@
     - compile（api）
         - 这种是我们最常用的方式，使用该方式依赖的库将会参与编译和打包。 
     - compileOnly
-        - 使用场景：有多个library,只要确保有一个module中该依赖能参与到打包即可，其他的可以使用compileOnly。运行时不需要，例如仅源代码注解或注释处理器
+        - 使用场景：有多个library，只要确保有一个module中该依赖能参与到打包即可，其他的可以使用compileOnly。运行时不需要，例如仅源代码注解或注释处理器
 
 
 
