--- a/Read/ReadMeWiki/00.方案实践/30.App安全防御大实践.md
+++ b/Read/ReadMeWiki/00.方案实践/30.App安全防御大实践.md
@@ -11,6 +11,7 @@
     - 2.3 序列化安全问题
     - 2.4 三方库lib中类安全
     - 2.5 反射代码安全
+    - 2.6 扫描漏洞安全
     - 2.9 作弊器攻击问题
 - 03.作弊器的监控
     - 3.1 监控介绍
@@ -112,6 +113,19 @@
 - 看到很多第三方库，比如gson，rxJava等库，几乎大多数类都是用finial修饰的。这个是为什么呢？
 - 当用final修饰一个类时，表明这个类不能被继承。也就是说，如果一个类你永远不会让他被继承，就可以用final进行修饰。final类中的成员变量可以根据需要设为final，但是要注意final类中的所有成员方法都会被隐式地指定为final方法。
 - 很多类，不想被开发者继承，为了内部安全。同时也避免反射攻击，所以就用finial修饰。这也是一种保证类安全的有效做法。
+
+
+#### 2.6 扫描漏洞安全
+- Activity 组件对外暴露风险
+    - Activity 组件对外暴露，且未做权限控制，可能会造成信息泄露、劫持利用、拒绝服务等风险。
+- 漏洞位置
+    ``` java
+    <activity android:name="com.yc.library.web.WebViewActivity"
+        android:exported="true"/>
+    ```
+- 修复建议
+    - 如果应用的 Activity 组件不必要对外，或者组件配置了intent filter标签，建议显示设置组件的'android:exported'属性为'false'；如果组件必须要提供给外部应用使用，建议对组件进行权限控制。
+    - android:exported 是Android中的四大组件 Activity，Service，Provider，Receiver 四大组件中都会有的一个属性。总体来说它的主要作用是：是否支持其它应用调用当前组件。
 
 
 
