--- a/Read/ReadMeWiki/01.大型方案/23.隐私合规优化实践.md
+++ b/Read/ReadMeWiki/01.大型方案/23.隐私合规优化实践.md
@@ -2,9 +2,8 @@
 - 01.整体概述
     - 1.1 遇到问题
     - 1.2 项目背景
-    - 1.3 基础概念介绍
-    - 1.4 设计目标
-    - 1.5 产生收益分析
+    - 1.3 设计目标
+    - 1.4 产生收益分析
 - 02.隐私合规测什么
     - 2.1 隐私合规是什么
     - 2.2 为何做隐私合规
@@ -38,9 +37,8 @@
 ### 01.整体概述
 #### 1.1 遇到问题
 - 国内对应用程序安全隐私问题监管变的越来越严格。各个应用市场对APP上架也有比较严格的检查。出现隐私合规安全问题主要有哪些呢？
-    - 某应用在三方的检查中发现对地理位置的获取存在每 30 秒一次的频繁调用。
     - 在用户同意隐私协议之前，不能有收集用户隐私数据的行为。例如，在用户同意之前不能去获取 Android ID、Device ID、MAC 等隐私数据
-    - 在用户同意隐私协议之后，搜集用户隐私数据的行为不能超出实现服务场景所必需的最低频率。例如，某些应用会在每次网络请求时将当前设备的 Android ID 作为 header 一起上报，如果没有对 Android ID 进行缓存处理的话，搜集该数据的行为频率就会非常高，此时一样存在隐私合规问题
+    - 在用户同意隐私协议之后，搜集用户隐私数据的行为不能超出实现服务场景所必需的最低频率。例如，某些应用会在每次网络请求时将当前设备的 Android ID 作为 header 一起上报，如果没有对 Android ID 进行缓存处理的话，搜集该数据的行为频率就会非常高，此时一样存在隐私合规问题。
 
 
 #### 1.2 项目背景
@@ -48,17 +46,14 @@
 - 除了开迭代针对性整改，从技术角度思考，有没有一劳永逸的办法，杜绝隐私调用不合规问题呢？
 
 
-#### 1.3 基础概念介绍
-
-
-#### 1.4 设计目标
+#### 1.3 设计目标
 - 针对提前收集用户隐私数据。
     - 需要统计出整个项目中所有涉及到隐私行为的相关代码，根据业务流程来判断该隐私行为是否合理、以及是否会在用户同意隐私协议之前被触发。这就需要对整个项目进行静态扫描。
 - 针对收集隐私数据哪里调用。
     - 需要在应用运行时动态记录每次触发隐私行为的时间点和调用链信息，根据触发时间来判断该隐私行为是否过量执行，根据调用链信息来辅助判断具体是哪一块业务在获取隐私数据。这就需要对应用进行动态记录。
 
 
-#### 1.5 产生收益分析
+#### 1.4 产生收益分析
 - 编码排查耗时大
     - 如果单纯靠开发人员来肉眼识别代码和编码统计的话，工作量非常大而且也很不现实，因为一个大型项目往往都会引入多个依赖库和第三方 SDK，可以规范自有代码，但没法修改和有效约束外部依赖，也很难理清楚依赖库的内部逻辑和调用链关系。
 - 提高合规隐私检测效率
@@ -104,7 +99,7 @@
 - 注：如果用户拒绝权限且不让再次显示系统权限授权弹窗的话，最好是提供端内可点击进入手机系统的权限设置页面以让用户可以选择开启对应权限。
 
 
-
+### 04.隐私合规检测
 #### 4.5 隐私数据注意项
 - 遇到的问题，每次排查隐私数据很麻烦
     - 因为随着项目更迭，随时可能有新的隐私安全问题被引入进来，而如果每次发版前都要重新走一遍上述流程来排查是否存在问题的话，也是很麻烦。
