--- a/Read/ReadMeWiki/05.智能硬件/03.TCP硬件设备通信实践.md
+++ b/Read/ReadMeWiki/05.智能硬件/03.TCP硬件设备通信实践.md
@@ -8,9 +8,11 @@
     - 2.1 Socket基础理解
     - 2.2 TCP/IP协议简介
     - 2.3 Socket与Http对比
+    - 2.4 Socket和ServerSocket
 - 03.Socket实践思路
     - 3.1 基础实践步骤
 - 04.通信实践坑
+    - 4.8 一些注意点
 - 05.方案设计
     - 5.1 整体架构图
     - 5.2 UML设计图
@@ -66,16 +68,27 @@
     - Socket：采用 服务器主动发送数据 的方式。可理解为：是服务器端有需要才进行通信
 
 
+#### 2.4 Socket和ServerSocket
+- Socket 和 ServerSocket 的区别是什么
+    - 在 Java 的 SDK 中，socket 的共有两个接口：用于监听客户连接的 ServerSocket 和用于通信的 Socket。
+      
+
 
 
 ### 03.Socket实践思路
 #### 3.1 基础实践步骤
-- Socket可基于TCP或者UDP协议，但TCP更加常用。所以下面的使用步骤 & 实例的Socket将基于TCP协议
+- Socket可基于TCP或者UDP协议，但TCP更加常用。所以下面的使用步骤 & 实例的Socket将基于TCP协议。
 
 
-
+### 04.通信实践坑
+#### 4.8 一些注意点
+- 实际应用中，在发生异常时，需要关闭 socket，并根据实际业务做一些错误处理工作。
 
 
 ### 参考链接
 - https://github.com/jiusetian/EasySocket
 - https://github.com/xuuhaoo/OkSocket
+- socket长链接：https://mp.weixin.qq.com/s?__biz=MzIwMTAzMTMxMg==&mid=2649492841&idx=1&sn=751872addc47d2464b8935be17d715d6&chksm=8eec8696b99b0f80b2ebb8e4c346adf177ad206401d83c17aca4047d883b0cc7c0788619df9d&scene=38#wechat_redirect
+- Android网络编程(二)Socket编程：https://www.jianshu.com/p/b04930d2b85e
+
+
