--- a/Read/ReadShareWiki/02.计划管理/02.计划拆分为任务.md
+++ b/Read/ReadShareWiki/02.计划管理/02.计划拆分为任务.md
@@ -58,6 +58,13 @@
 
 
 ### 04.诸多目标间关系
+#### 4.1 短期和长期目标
+- 短期目标和长期目标要一致。比如我想要成为小说家，我的短期目标是什么？就是天天写小说。而长期目标是什么？就是成为小说家，写很多部作品；长期目标是做一个作家孵化公司，那么现在短期目标就是培养作者，推出作者。
+- 不管是婚姻、事业、工作、梦想，短期和长期目标一致，很重要，不然长期目标就是一个假目标。人生做减法比做加法更重要。
+
+
+
+#### 4.2 目标要有优先级
 - 比如在一年内制定的目标多达几十个，那么应当要评估多个目标的重要程度，根据重要程度不同确保重要程度高的目标优先达成。也就是多个目标是有优先级的。
 
 
@@ -71,6 +78,12 @@
 #### 5.2 实际案例分析
 - 比如目标是攻克敌方一个集团军，那么任务就应该规划到攻克敌方集团军中的师而不应该再往下细分到攻克敌方的团或者营，任务尽量不要划分得过细，尽量保证完成一个任务可以让人感觉到很明显地向目标前进了一大步，也可以将任务理解成一个次级目标。
 - 再比如婚恋方面的脱单目标，可以把它划分成大量收集异性资源的任务、自身形象气质提升的任务、与异性话题以及兴趣爱好培养的任务等等，那么每完成一个任务就等于向脱单目标推进了一大步。
+
+
+#### 5.3 必须把目标细化
+- 细化的好处是什么？就是让长期目标变得容易实现。比如：我要成为作家，我想要成为什么样的作家？将大目标分解成每个月、每天的小目标，以及当下的目标。
+- 我要成为作家，怎么细化它。比如：我想成为作家，我打算先写10年；打算每年写2部作品；打算每半年写出1部作品；打算每个月写3万字；打算每天写1000字；打算每天9点写完。
+- 这就是细化，现在是不是觉得成为作家也是可以的，而且很简单。这样你还会焦虑吗？基本不会了。为什么呢？因为目标明确，可执行。
 
 
 
