--- a/Read/ReadShareWiki/02.计划管理/06.很难坚持怎么办.md
+++ b/Read/ReadShareWiki/02.计划管理/06.很难坚持怎么办.md
@@ -1,4 +1,5 @@
 #### 目录介绍
+- 02.是否真的很重要
 - 03.想太多而做太少
 - 04.忽略长远的收益
 - 05.掌控心态很重要
@@ -6,6 +7,12 @@
 - 07.分析执行的偏差
 - 08.分析资源足不足
 
+
+
+### 02.是否真的很重要
+- 分析一下计划为什么没完成。我觉得大多数之所以没有完成，是因为完不成也没什么，没有任何影响。假如没有完成，你一百万没有了，你会完成吗？肯定会！这就是根源。
+- 要记住，你制定的计划一定要对你来说很重要，如果没有完成可能会对你造成很严重的后果，那么多半就能完成。
+- 如果你的写作目标没有完成，这个我没有办法帮助你，只能说个真相，就是写作这件事对你并不重要。你可能反驳我，觉得我说错了，但是你知道我说对了。你嘴上觉得重要，行动出卖了你，如果真的超级重要，就一定会完成。
 
 
 
