--- a/Read/ReadShareWiki/02.计划管理/08.目标管理方法论.md
+++ b/Read/ReadShareWiki/02.计划管理/08.目标管理方法论.md
@@ -1,6 +1,10 @@
 #### 目录介绍
 - 01.思考你想成为谁
-
+- 02.目标管理总导论
+- 03.目标管理法核心
+- 04.目标的设定制定
+- 05.目标执行与追踪
+- 06.
 
 
 
@@ -17,15 +21,18 @@
     - 你想成为一个架构师，那就去努力学习架构师必备的知识和技能。你想未来创业，那就从现在开始，不能只闷头做自己的本职工作，要多接触创业者，不管成功还是失败的创业者，多学习借鉴他们的经验，多了解一些创业案例，甚至于现在所在的公司就是一个创业学习过程。
 
 
+### 02.目标管理总导论
+- 目标管理的理念是现代管理学之父彼得·德鲁克在其著作《管理的实践》中最先提出的。德鲁克认为，并不是有了工作才有目标，而是相反，是先有了目标才能确定每个人的工作。
+
+
+### 03.目标管理法核心
 
 
 
 
 
-
-
-
-
+### 05.目标执行与追踪
+- 心中有一幅远景，却无能力去执行，终究只是幻想罢了，所以，每月要开一次月绩效指标执行复盘。要针对绩效表现“异常”的指标（包括但不限于：退步，与预算值、目标值、标准值、去年同期差异超过20%，内外部异常事件…等），进行差异原因分析并提出改善对策。
 
 
 
