--- a/Read/ReadMeWiki/01.大型方案/16.通用缓存设计实践.md
+++ b/Read/ReadMeWiki/01.大型方案/16.通用缓存设计实践.md
@@ -31,6 +31,7 @@
     - 4.7 缓存数据的迁移
     - 4.8 缓存数据加密
     - 4.9 各种缓存效率对比
+    - 4.10 任务排期和落地
 - 05.方案基础设计
     - 5.1 整体架构图
     - 5.2 UML设计图
@@ -43,8 +44,18 @@
     - 6.3 灰度设计
     - 6.4 降级设计
     - 6.5 异常设计
-- 07.其他说明介绍
-    - 7.1 参考链接
+    - 6.6 兼容性设计
+    - 6.7 自测case设计
+- 07.通用Api设计
+    - 7.1 如何依赖该库
+    - 7.2 初始化缓存库
+    - 7.3 无缝切换各种缓存方案
+    - 7.4 数据的存和取
+- 08.其他说明介绍
+    - 8.1 遇到的坑分析
+    - 8.2 遗留的问题
+    - 8.3 未来的规划
+    - 8.4 参考链接
 
 
 ### 01.整体概述
@@ -61,7 +72,11 @@
 
 
 #### 1.4 设计目标
-- 设计一个缓存通用方案，其次，它的结构需要很简单，因为很多地方需要用到，再次，它得线程安全。
+- 打造通用存储库
+    - 设计一个缓存通用方案，其次，它的结构需要很简单，因为很多地方需要用到，再次，它得线程安全。灵活切换不同的缓存方式，使用简单。
+- 内部开源该库
+    - 作为技术沉淀，当作专项来推动进展。高复用低耦合，便于拓展，可快速移植，解决各个项目使用内存缓存，sp，mmkv，sql，lru的凌乱。抽象一套统一的API接口。
+
 
 
 #### 1.5 产生收益分析
@@ -83,9 +98,13 @@
 - 当缓存容量达到设定的容量的时候，会根据制定的策略进行删除相应的元素。
 
 
+- 什么是二级缓存
+    - LruCache将图片保存在内存，存取速度较快，退出APP后缓存会失效；而DiskLruCache将图片保存在磁盘中，下次进入应用后缓存依旧存在，它的存取速度相比LruCache会慢上一些。
+
+
 
 #### 2.3 存储该如何选择
-- 内存缓存：
+- 内存缓存：存储在内存中，如果对象销毁则内存也会跟随销毁。如果是静态对象，那么进程杀死后内存会销毁。
     - map
     - lru
 - 磁盘缓存：后台应用有可能会被杀死，那么相应的内存缓存对象也会被销毁。当你的应用重新回到前台显示时，你需要用到缓存数据时，这个时候可以用磁盘缓存。
@@ -93,7 +112,6 @@
     - mmkv
     - diskFile
     - sqlite
-- 如下所示
 
 
 
@@ -116,6 +134,16 @@
 
 ### 03.存储方案原理
 #### 3.1 Sp存储原理分析
+- SharedPreferences，它是一个轻量级的存储类，特别适合用于保存软件配置参数。
+    - 轻量级，以键值对的方式进行存储。采用的是xml文件形式存储在本地，程序卸载后会也会一并被清除，不会残留信息。线程安全的。
+- 它有一些弊端如下所示
+    - 对文件IO读取，因此在IO上的瓶颈是个大问题，因为在每次进行get和commit时都要将数据从内存写入到文件中，或从文件中读取。
+    - 多线程场景下效率较低，在get操作时，会锁定SharedPreferences对象，互斥其他操作，而当put，commit时，则会锁定Editor对象，使用写入锁进行互斥，在这种情况下，效率会降低。
+    - 不支持跨进程通讯，由于每次都会把整个文件加载到内存中，不建议存储大的文件内容，比如大json。
+- 有一些使用上的建议如下
+    - 建议不要存储较大数据；频繁修改的数据修改后统一提交而不是修改过后马上提交；在跨进程通讯中不去使用；键值对不宜过多
+
+
 
 
 #### 3.2 MMKV存储原理分析
@@ -138,11 +166,12 @@
 
 #### 3.4 DiskLruCache分析
 - DiskLruCache 用于实现存储设备缓存，即磁盘缓存，它通过将缓存对象写入文件系统从而实现缓存的效果。
+- DiskLruCache最大的特点就是持久化存储，所有的缓存以文件的形式存在。在用户进入APP时，它根据日志文件将DiskLruCache恢复到用户上次退出时的情况，日志文件journal保存每个文件的下载、访问和移除的信息，在恢复缓存时逐行读取日志并检查文件来恢复缓存。
 
 
 
 #### 3.7 Sqlite存储分析
-- 注意：缓存的数据库是存放在/data/data//databases/目录下，是占用内存空间的，如果缓存累计，容易浪费内存，需要及时清理缓存。
+- 注意：缓存的数据库是存放在/data/data/databases/目录下，是占用内存空间的，如果缓存累计，容易浪费内存，需要及时清理缓存。
 
 
 
@@ -169,7 +198,13 @@
 #### 4.7 缓存数据的迁移
 
 
-#### 4.8 各种缓存效率对比
+#### 4.8 缓存数据加密
+
+
+
+#### 4.9 各种缓存效率对比
+
+#### 4.10 任务排期和落地
 
 
 ### 05.方案基础设计
@@ -204,17 +239,37 @@
 #### 6.5 异常设计
 
 
-### 07.其他说明介绍
-#### 7.1 参考链接
+#### 6.6 兼容性设计
 
 
-### 01.两种缓存简单介绍
-- 什么是二级缓存
-    - LruCache将图片保存在内存，存取速度较快，退出APP后缓存会失效；而DiskLruCache将图片保存在磁盘中，下次进入应用后缓存依旧存在，它的存取速度相比LruCache会慢上一些。
-- DiskLruCache持久存储
-    - DiskLruCache最大的特点就是持久化存储，所有的缓存以文件的形式存在。在用户进入APP时，它根据日志文件将DiskLruCache恢复到用户上次退出时的情况，日志文件journal保存每个文件的下载、访问和移除的信息，在恢复缓存时逐行读取日志并检查文件来恢复缓存。
+#### 6.7 自测case设计
 
 
+
+### 07.通用Api设计
+#### 7.1 如何依赖该库
+
+
+#### 7.2 初始化缓存库
+
+
+#### 7.3 无缝切换各种缓存方案
+
+
+#### 7.4 数据的存和取
+
+
+### 08.其他说明介绍
+#### 8.1 遇到的坑分析
+
+
+#### 8.2 遗留的问题
+
+
+#### 8.3 未来的规划
+
+
+#### 8.4 参考链接
 
 
 
