--- a/Read/ReadMeWiki/01.大型方案/20.通用日志上传实践.md
+++ b/Read/ReadMeWiki/01.大型方案/20.通用日志上传实践.md
@@ -306,7 +306,8 @@
     - https://toutiao.io/posts/nzg8is/preview
 - 京东零售云mPaaS移动端日志回捞探索实践
     - https://www.51cto.com/article/682747.html
-    
+- okhttp带进度上传
+    - https://www.jianshu.com/p/bf734b3fb304
 
 
 
