--- a/Read/ReadMeWiki/01.大型方案/16.通用缓存设计实践.md
+++ b/Read/ReadMeWiki/01.大型方案/16.通用缓存设计实践.md
@@ -275,10 +275,14 @@
 
 
 #### 参考
-- https://github.com/JeremyLiao/FastSharedPreferences
-
-
-
+- 自己撸一个FastKV
+    - https://mp.weixin.qq.com/s/D24KZ2YxLiL6r4EXrMqgyg
+- 腾讯MMKV的原理与实现
+    - https://www.jianshu.com/p/c774ad91379c
+- MMKV缺陷：不支持getAll?
+    - https://juejin.cn/post/6939473558259105805/
+- MMKV, DataStore, 数据库, Sp 性能大比拼
+    - https://mp.weixin.qq.com/s/vimX6bnJDkPbXAqVJCbbfw
 
 
 
