--- a/Read/ReadMeWiki/01.大型方案/16.通用缓存设计实践.md
+++ b/Read/ReadMeWiki/01.大型方案/16.通用缓存设计实践.md
@@ -1,6 +1,6 @@
 #### 目录介绍
 - 01.整体概述
-    - 1.1 项目背景
+    - 1.1 项目背景介绍
     - 1.2 遇到问题
     - 1.3 基础概念介绍
     - 1.4 设计目标
@@ -10,7 +10,6 @@
     - 2.2 缓存策略有哪些
     - 2.3 存储该如何选择
     - 2.4 存储方案优缺点
-    - 2.5 常见的缓存策略
     - 2.6 存储如何优化
     - 2.7 使用缓存注意点
 - 03.存储方案原理
@@ -59,7 +58,7 @@
 
 
 ### 01.整体概述
-#### 1.1 项目背景
+#### 1.1 项目背景介绍
 
 
 #### 1.2 遇到问题
@@ -67,7 +66,7 @@
 
 #### 1.3 基础概念介绍
 - 提及缓存，可能很容易想到Http的缓存机制，LruCache，其实缓存最初是针对于网络而言的，也是狭义上的缓存，广义的缓存是指对数据的复用。
-- 缓存容量，就是缓存的大小，到达这个限度以后，那么就须要进行缓存清理了框架。
+- 缓存容量，就是缓存的大小，到达这个限度以后，那么就须要进行缓存清理了框架。这个时候就需要删除一些旧的缓存并添加新的缓存。
 
 
 
@@ -87,48 +86,53 @@
 - 比较常见的是内存缓存以及磁盘缓存。内存缓存：这里的内存主要指的存储器缓存；磁盘缓存：这里主要指的是外部存储器，手机的话指的就是存储卡
 - 内存缓存：通过预先消耗应用的一点内存来存储数据，便可快速的为应用中的组件提供数据，是一种典型的以空间换时间的策略。
 - 磁盘缓存：读取磁盘文件要比直接从内存缓存中读取要慢一些，而且需要在一个UI主线程外的线程中进行，因为磁盘的读取速度是不能够保证的，磁盘文件缓存显然也是一种以空间换时间的策略。
+- 二级缓存：内存缓存和磁盘缓存结合。比如，LruCache将图片保存在内存，存取速度较快，退出APP后缓存会失效；而DiskLruCache将图片保存在磁盘中，下次进入应用后缓存依旧存在，它的存取速度相比LruCache会慢上一些。
 
 
 
 #### 2.2 缓存策略有哪些
-- 不论是内存缓存仍是磁盘缓存，缓存的容量都是有限制的，因此跟线程池满了以后的线程处理策略相似，缓存满了的时候，咱们也须要有相应的处理策略，常见的策略有：
+- 不论是内存缓存仍是磁盘缓存，缓存的容量都是有限制的，因此跟线程池满了以后的线程处理策略相似，当缓存容量达到设定的容量的时候，会根据制定的策略进行删除相应的元素。常见的策略有：
 - FIFO(first in first out)：先进先出策略，相似队列。
 - LFU(less frequently used)：最少使用策略，RecyclerView的缓存采用了此策略。
 - LRU(least recently used):最近最少使用策略，Glide在进行内存缓存的时候采用了此策略。
-- 当缓存容量达到设定的容量的时候，会根据制定的策略进行删除相应的元素。
 
 
-- 什么是二级缓存
-    - LruCache将图片保存在内存，存取速度较快，退出APP后缓存会失效；而DiskLruCache将图片保存在磁盘中，下次进入应用后缓存依旧存在，它的存取速度相比LruCache会慢上一些。
 
 
 
 #### 2.3 存储该如何选择
 - 内存缓存：存储在内存中，如果对象销毁则内存也会跟随销毁。如果是静态对象，那么进程杀死后内存会销毁。
-    - map
-    - lru
+    - Map
+    - LruCache
 - 磁盘缓存：后台应用有可能会被杀死，那么相应的内存缓存对象也会被销毁。当你的应用重新回到前台显示时，你需要用到缓存数据时，这个时候可以用磁盘缓存。
-    - sp
-    - mmkv
-    - diskFile
-    - sqlite
-
+    - SharedPreferences
+    - MMKV
+    - DiskLruCache
+    - SqlLite
+- 还有一些其他开源缓存库
+    - ACache
 
 
 #### 2.4 存储方案优缺点
+- 内存缓存
+    - Map：内存缓存，一般用HashMap存储一些数据，主要存储一些临时的对象
+    - LruCache：内存淘汰缓存，内部使用LinkedHashMap，会淘汰最长时间未使用的对象
+- 磁盘缓存
+    - SharedPreferences：轻量级磁盘存储，一般存储配置属性，线程安全
+    - MMKV：腾讯开源存储库，内部采用mmpv
+    - DiskLruCache：磁盘淘汰缓存，写入数据到file文件
+    - SqlLite：移动端轻量级数据库
+- 其他开源缓存库
+    - ACache：一款高效二级存储库，采用内存缓存和磁盘缓存
 
 
-#### 2.5 常见的缓存策略
-- 现在主流的app中图片等资源的缓存策略一般是分两级
-    - 一个是内存级别的缓存，一个是磁盘级别的缓存。
-- 作为android系统的维护者google也开源了其缓存方案，LruCache和DiskLruCache。
-    - 从android3.1开始LruCache已经作为android源码的一部分维护在android系统中，为了兼容以前的版本android的support-v4包也提供了LruCache的维护，如果App需要兼容到android3.1之前的版本就需要使用support-v4包中的LruCache，如果不需要兼容到android3.1则直接使用android源码中的LruCache即可。
-    - 需要注意的是DiskLruCache并不是android源码的一部分。
+
+#### 2.6 存储如何优化
+
 
 
 #### 2.7 使用缓存注意点
-- 在使用内存缓存的时候须要注意防止内存泄露，
-- 使用磁盘缓存的时候注意确保缓存的时效性
+- 在使用内存缓存的时候须要注意防止内存泄露，使用磁盘缓存的时候注意确保缓存的时效性
 
 
 
@@ -166,7 +170,7 @@
 
 #### 3.4 DiskLruCache分析
 - DiskLruCache 用于实现存储设备缓存，即磁盘缓存，它通过将缓存对象写入文件系统从而实现缓存的效果。
-- DiskLruCache最大的特点就是持久化存储，所有的缓存以文件的形式存在。在用户进入APP时，它根据日志文件将DiskLruCache恢复到用户上次退出时的情况，日志文件journal保存每个文件的下载、访问和移除的信息，在恢复缓存时逐行读取日志并检查文件来恢复缓存。
+    - DiskLruCache最大的特点就是持久化存储，所有的缓存以文件的形式存在。在用户进入APP时，它根据日志文件将DiskLruCache恢复到用户上次退出时的情况，日志文件journal保存每个文件的下载、访问和移除的信息，在恢复缓存时逐行读取日志并检查文件来恢复缓存。
 
 
 
