--- a/Read/ReadMeWiki/01.大型方案/14.ASM实践方法耗时统计.md
+++ b/Read/ReadMeWiki/01.大型方案/14.ASM实践方法耗时统计.md
@@ -131,4 +131,5 @@
 - Gradle学习(八) 统计Task执行时长
     - https://blog.csdn.net/chennai1101/article/details/103280523/
 - https://github.com/re-chen/MethodTimeMonitor
-
+- 一个能让你了解所有函数调用顺序以及函数耗时的Android库
+    - https://github.com/zjw-swun/AppMethodOrder
