--- a/Read/ReadMeWiki/01.大型方案/22.日志打印和存储实践.md
+++ b/Read/ReadMeWiki/01.大型方案/22.日志打印和存储实践.md
@@ -7,16 +7,19 @@
     - 1.5 产生收益分析
 - 02.日志存储设计思路
     - 2.1 使用跨进程写日志
-    - 2.2 日志缓存的策略
+    - 2.2 选择Service通信
     - 2.3 组装log日志设计
     - 2.4 日志文件创建机制
+    - 2.6 日志缓存的策略
+    - 2.9 多进程存储问题
 - 03.关键技术点说明
-    - 3.2 开启并绑定服务
+    - 3.2 跨进程启动服务
     - 3.3 跨进程传输日志
     - 3.4 日志写入操作
     - 3.5 日志如何追加写入
     - 3.6 日志切分存储
     - 3.7 日志自动清除操作
+    - 3.9 遇到的一些问题
 - 04.使用高效日志库
     - 4.1 高效日志方案
     - 4.2 mmap理解介绍
@@ -46,6 +49,61 @@
 #### 1.3 基础概念介绍
 #### 1.4 设计目标
 #### 1.5 产生收益分析
+
+
+### 02.日志存储设计思路
+#### 2.1 使用跨进程写日志
+- 跨进程通信目前有哪些
+    - aidl
+
+
+#### 2.2 选择Service通信
+- 使用Service服务场景：后台运行和跨进程访问
+    - 后台运行，Service可以在后台执行长时间运行操作而不提供用户界面；跨进程访问，组件可以绑定到服务，以与之进行交互，甚至是执行进程间通信 (IPC)。
+- 开启远程服务(Remote Service)
+    - 该服务是独立的进程，对应进程名格式为所在包名加指定的android:process字符串。由于是独立的进程，因此在Activity所在进程被Kill的时候，该服务依然在运行，不受其他进程影响，有利于为多个进程提供服务具有较高的灵活性。缺点是该服务是独立的进程，会占用一定资源，并且使用AIDL进行IPC稍微麻烦一点。
+- 使用Service服务技术选择
+    - 如果只是想开个服务在后台运行的话，直接startService即可；如果需要相互之间进行传值或者操作的话，就应该通过bindService。
+- 需要注意的点有哪些
+    - Service是在主线程里执行操作的，可能会因为执行耗时操作而导致ANR。如果是跨进程传输，则需要注意读写耗时
+
+
+
+
+#### 2.3 组装log日志设计
+
+
+#### 2.4 日志文件创建机制
+
+
+
+#### 2.6 日志缓存的策略
+
+
+#### 2.9 多进程存储问题
+
+
+### 03.关键技术点说明
+#### 3.2 跨进程启动服务
+
+
+#### 3.3 跨进程传输日志
+
+
+#### 3.4 日志写入操作
+
+
+#### 3.5 日志如何追加写入
+
+
+#### 3.6 日志切分存储
+
+
+#### 3.7 日志自动清除操作
+
+#### 3.9 遇到的一些问题
+- 跨进程启动Service无效
+    - 在manifest注册的时候加了process属性，然后就无法启动了，去掉就可以正常启动的？
 
 
 ### 04.使用高效日志库
@@ -129,6 +187,8 @@
     - https://www.51cto.com/article/682747.html
 - 美团开源移动端基础日志库
     - https://tech.meituan.com/2018/10/11/logan-open-source.html
+- Android跨进程启动Service流程及常见问题
+    - https://blog.csdn.net/One_Month/article/details/80255893
 
 
 
