--- a/Read/ReadShareWiki/08.技术管理/02.技术招聘方法论.md
+++ b/Read/ReadShareWiki/08.技术管理/02.技术招聘方法论.md
@@ -5,8 +5,9 @@
 - 04.知识深度和广度
 - 05.软素质考察
 - 06.社招面试标准
-- 07.定级别关键点
-- 08.面试重点介绍
+- 07.实习生面试标准
+- 08.定级别关键点
+- 09.面试重点介绍
 
 
 ### 01.技术基础知识
@@ -53,14 +54,24 @@
 
 
 
-### 07.定级别关键点
+### 07.实习生面试标准
+- 主要分为 3 个维度，基础能力，专业能力（加分项），软素质。
+- 基础能力的考察：主要考察候选人所学学科基础知识。网络、数据结构、操作系统、计算机组成原理、数据库；Java 基础、设计模式
+- 代码能力：算法题（简单，中等难度），思路、代码质量
+- 专业能力的考察：Android 基础，对部分Android 源码有所了解，那么了解多少；python、shell、linux 命令、git、vim、效率工具
+- 学习能力：对新的知识如何学习，所学知识解决了什么问题，中间碰到过哪些坑，看过的书、公众号、博客等。学习方法和过程要考察，也要重点关注学习的结果。
+- 其他一些软能力：协作沟通：表达清晰、准确，复杂问题可以提炼为简单的话术表达清楚；思维方式：金字塔思维，结构化思维；问题解决能力：过往处理过的疑难杂症，思路是否开阔，是否从本质上解决问题；学校成绩：学校、专业排名、竞赛成绩动机：爱好、成就感、薪酬、性格
+
+
+
+### 08.定级别关键点
 - P6(一般3到6年)重点关注面试内容中的1和2，对于内容3需要对常见的设计模式和分层架构有了解。
 - P7(一般4到8年)重点关注面试内容中的2、3、4，架构方面有实际的设计经验，对某一方面知识有深度的理解。
 - 软素质方面都需要关注，基础满足沟通能力好，团队合作无问题。P7如果负责过独立的项目，需要对项目管理方面有一定的理解。
 
 
 
-### 08.面试重点介绍
+### 09.面试重点介绍
 - 一面二面，主要是技术面试，对面试内容1~5都需要考察，但每轮面试有不同关注重点。一面重点关注1，2，3；二面重点关注3，4，5
 - 三面，主要是技术leader面试，主要是3，4，5考察，但不仅仅局限于技术，而是解决技术难题的思路，以及闭环思维。
 - 四面，主要是人事沟通，主要是5考察，职业方向，过往经历，这个时候就需要吹牛逼呢。
